Fix squashing of filters

--- a/styles/candidates/filters.module.css
+++ b/styles/candidates/filters.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 260px;
+    white-space: nowrap
 }
 
 .filterTitle {
